--- a/app/src/main/res/layout/fragment_auth_landing.xml
+++ b/app/src/main/res/layout/fragment_auth_landing.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 31.12.20 18:38
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see https://www.gnu.org/licenses
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
 <layout
@@ -56,19 +48,9 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintVertical_bias="0.1"
-			style="@style/auth_slogan1"/>
-
-
-		<com.google.android.material.textview.MaterialTextView android:id="@+id/tvAuthSlogan_2"
-			android:text="@string/auth_slogan2"
-			android:textAlignment="center"
-
-			app:layout_constraintBottom_toTopOf="@id/btnFacebookLoginDelegate"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/tvAuthSlogan_1"
-			app:layout_constraintVertical_bias="0.7"
-			style="@style/auth_slogan2"/>
+			style="@style/auth_slogan1"
+			/>
+		
 
 
 		<com.google.android.material.button.MaterialButton
@@ -89,7 +71,8 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/tvAuthSlogan_1"
-			app:layout_constraintVertical_bias="0.8"/>
+			app:layout_constraintVertical_bias="0.8"
+			/>
 
 		<com.google.android.material.textview.MaterialTextView
 			android:id="@+id/tvOpenPolicies"
