--- a/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 31.12.20 17:51
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see https://www.gnu.org/licenses
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
 <layout
@@ -52,8 +44,7 @@
 
 		</androidx.cardview.widget.CardView>
 
-		<com.google.android.material.button.MaterialButton
-			android:id="@+id/btnDeletePhoto"
+		<com.google.android.material.button.MaterialButton android:id="@+id/btnDeletePhoto"
 			android:layout_width="48dp"
 			android:layout_height="48dp"
 			android:layout_gravity="end|top"
@@ -67,7 +58,7 @@
 			app:icon="@drawable/ic_clear_24dp"
 			app:elevation="0dp"
 			android:elevation="@null"
-			app:shapeAppearanceOverlay="@style/MyAppShapeAppearanceOverlay.Button.Rounded"
+			app:shapeAppearanceOverlay="@style/MyAppShapeAppearanceOverlay.Circle"
 
 			style="@style/Widget.MaterialComponents.Button.Icon"
 			/>
