--- a/app/src/main/res/navigation/flow_navigation.xml
+++ b/app/src/main/res/navigation/flow_navigation.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 31.12.20 18:00
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see https://www.gnu.org/licenses
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/flowNavigation"
-	app:startDestination="@id/mainFlowFragment"
+	app:startDestination="@id/splashFragment"
 	>
 
 	<action android:id="@+id/action_global_authFlowFragment"
@@ -41,6 +33,12 @@
 		android:name="com.mmdev.roove.ui.main.MainFlowFragment"
 		android:label="MainFlowFragment"
 		tools:layout="@layout/fragment_main_flow"
+		/>
+	
+	<fragment android:id="@+id/splashFragment"
+		android:name="com.mmdev.roove.ui.SplashFragment"
+		android:label="SplashFragment"
+		tools:layout="@layout/fragment_splash"
 		/>
 
 
