--- a/app/src/main/res/xml/motion_profile_scene.xml
+++ b/app/src/main/res/xml/motion_profile_scene.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 31.12.20 17:37
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see https://www.gnu.org/licenses
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
 <MotionScene
@@ -56,8 +48,7 @@
 	<ConstraintSet android:id="@+id/expandedToolbar">
 
 		<!-- viewpager2 with user photos -->
-		<Constraint
-			android:id="@+id/viewPagerProfilePhotos"
+		<Constraint android:id="@+id/viewPagerProfilePhotos"
 			android:layout_width="0dp"
 			android:layout_height="@dimen/collapseBarHeight"
 			android:clipToPadding="false"
@@ -69,12 +60,11 @@
 			/>
 
 		<!-- profile name -->
-		<Constraint
-			android:id="@+id/tvUserName"
+		<Constraint android:id="@+id/tvUserName"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="@dimen/general_size_16dp"
-			android:layout_marginBottom="@dimen/general_size_16dp"
+			android:layout_marginStart="16dp"
+			android:layout_marginBottom="16dp"
 
 			app:layout_constraintVertical_bias="1"
 			app:layout_constraintTop_toTopOf="parent"
@@ -83,11 +73,10 @@
 			/>
 
 		<!-- fab -->
-		<Constraint
-			android:id="@+id/fabProfileSendMessage"
+		<Constraint android:id="@+id/fabProfileSendMessage"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:layout_marginEnd="@dimen/general_size_16dp"
+			android:layout_marginEnd="16dp"
 
 			app:layout_constraintTop_toBottomOf="@id/viewPagerProfilePhotos"
 			app:layout_constraintBottom_toBottomOf="@id/viewPagerProfilePhotos"
@@ -100,8 +89,7 @@
 	<ConstraintSet android:id="@+id/collapsedToolbar">
 
 		<!-- viewpager2 with user photos -->
-		<Constraint
-			android:id="@+id/viewPagerProfilePhotos"
+		<Constraint android:id="@+id/viewPagerProfilePhotos"
 			android:layout_width="0dp"
 			android:layout_height="?attr/actionBarSize"
 
@@ -113,8 +101,7 @@
 			app:layout_constraintBottom_toBottomOf="@id/tvUserName"
 			/>
 
-		<Constraint
-			android:id="@+id/tlDotsIndicatorProfile"
+		<Constraint android:id="@+id/tlDotsIndicatorProfile"
 			android:layout_width="0dp"
 			android:layout_height="10dp"
 
@@ -127,8 +114,7 @@
 			/>
 
 		<!-- "toolbar" background -->
-		<Constraint
-			android:id="@+id/toolbarBackground"
+		<Constraint android:id="@+id/toolbarBackground"
 			android:layout_width="0dp"
 			android:layout_height="0dp"
 
@@ -141,8 +127,7 @@
 			/>
 
 		<!-- profile name -->
-		<Constraint
-			android:id="@+id/tvUserName"
+		<Constraint android:id="@+id/tvUserName"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:scaleX="0.7"
@@ -157,11 +142,10 @@
 		</Constraint>
 
 		<!-- fab -->
-		<Constraint
-			android:id="@+id/fabProfileSendMessage"
+		<Constraint android:id="@+id/fabProfileSendMessage"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:layout_marginEnd="@dimen/general_size_16dp"
+			android:layout_marginEnd="16dp"
 
 			android:scaleY="0"
 			android:scaleX="0"
