--- a/app/src/main/res/layout/fragment_pairs.xml
+++ b/app/src/main/res/layout/fragment_pairs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -43,9 +43,8 @@
 			android:clipToPadding="false"
 			android:overScrollMode="never"
 
-			app:visibilityInvisible='@{!viewModel.showTextHelper}'
+			app:visibilityInvisible="@{!viewModel.showTextHelper}"
 
-			app:bindData="@{viewModel.matchedUsersList}"
 			app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
 			app:spanCount="2"
 
@@ -65,9 +64,9 @@
 			android:gravity="center"
 
 			android:text="@string/fragment_pairs_explanation_text"
-			android:textSize="24sp"
-			app:visibilityInvisible='@{viewModel.showTextHelper}'
-
+			android:textAppearance="?textAppearanceHeadline5"
+			
+			app:visibilityInvisible="@{viewModel.showTextHelper}"
 
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
