--- a/app/src/main/res/layout/btm_sheet_settings_preferences.xml
+++ b/app/src/main/res/layout/btm_sheet_settings_preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -38,7 +38,7 @@
 			android:padding="8dp"
 	
 			android:text="@string/tv_ages_you_prefer"
-			android:textSize="24sp"
+			android:textAppearance="?textAppearanceHeadline5"
 	
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -54,37 +54,34 @@
 			app:cardBackgroundColor="@color/colorPrimary"
 			app:cardCornerRadius="16dp"
 			app:contentPadding="16dp"
-			android:elevation="0dp"
+			app:cardElevation="0dp"
 			
 			app:layout_constraintTop_toBottomOf="@id/tvAgePicker"
 			app:layout_constraintBottom_toTopOf="@id/tvPreferredGenderPicker"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			>
-	
-			<org.florescu.android.rangeseekbar.RangeSeekBar
+			
+			<com.google.android.material.slider.RangeSlider
 				android:id="@+id/rangeSeekBarAgePicker"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:background="@null"
-	
-				app:absoluteMinValue="18"
-				app:absoluteMaxValue="50"
-	
-				app:alwaysActive="false"
-	
-				app:textAboveThumbsColor="@color/white"
-				app:thumbDisabled="@drawable/custom_slider_thumb"
-				app:thumbNormal="@drawable/custom_slider_thumb"
-				app:thumbPressed="@drawable/custom_slider_thumb"
-	
-				app:showLabels="true"
-				app:valuesAboveThumbs="true"
+				
+				android:valueFrom="18"
+				android:valueTo="100"
+				android:stepSize="1"
+				
+				app:trackColorActive="?colorSecondary"
+				app:trackColorInactive="@color/lolite_25"
+				app:haloColor="?colorSecondary"
+				
+				app:thumbColor="@color/white"
+				app:thumbRadius="16dp"
+				
 				/>
-	
 		</com.google.android.material.card.MaterialCardView>
 	
-		<TextView
+		<com.google.android.material.textview.MaterialTextView
 			android:id="@+id/tvPreferredGenderPicker"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
@@ -93,7 +90,7 @@
 			android:padding="8dp"
 	
 			android:text="@string/tv_gender_showing"
-			android:textSize="24sp"
+			android:textAppearance="?textAppearanceHeadline5"
 	
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +122,6 @@
 				android:padding="16dp"
 	
 				android:text="@string/preferredGenderMale"
-				android:textSize="20sp"
 				android:textAllCaps="false"
 				android:textColor="@color/white_tint_color"
 	
@@ -142,7 +138,7 @@
 				android:padding="16dp"
 	
 				android:text="@string/preferredGenderFemale"
-				android:textSize="20sp"
+				android:textAllCaps="false"
 				android:textColor="@color/white_tint_color"
 	
 				app:backgroundTint="@color/lolite_checked_tint"
