--- a/app/src/main/res/layout/fragment_auth_registration.xml
+++ b/app/src/main/res/layout/fragment_auth_registration.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -288,42 +288,40 @@
 				app:layout_constraintBottom_toTopOf="@id/cvRegContainerAgePicker"
 				/>
 
-			<androidx.cardview.widget.CardView
+			<com.google.android.material.card.MaterialCardView
 				android:id="@+id/cvRegContainerAgePicker"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 
 				app:cardElevation="0dp"
 				app:cardBackgroundColor="@color/colorPrimary"
-				app:cardCornerRadius="20dp"
+				app:cardCornerRadius="16dp"
 				app:contentPadding="16dp"
 
 				app:layout_constraintStart_toStartOf="@id/step3View"
 				app:layout_constraintEnd_toEndOf="@id/step3View"
 				app:layout_constraintTop_toBottomOf="@id/tvRegAgePicker"
 				>
-
-				<org.florescu.android.rangeseekbar.RangeSeekBar
+				
+				<com.google.android.material.slider.RangeSlider
 					android:id="@+id/rangeSeekBarRegAgePicker"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:background="@null"
-
-					app:absoluteMinValue="18"
-					app:absoluteMaxValue="50"
-
-					app:alwaysActive="false"
-
-					app:textAboveThumbsColor="@color/white"
-					app:thumbDisabled="@drawable/custom_slider_thumb"
-					app:thumbNormal="@drawable/custom_slider_thumb"
-					app:thumbPressed="@drawable/custom_slider_thumb"
-
-					app:showLabels="true"
-					app:valuesAboveThumbs="true"
+					
+					android:valueFrom="18"
+					android:valueTo="100"
+					android:stepSize="1"
+					
+					app:trackColorActive="?colorSecondary"
+					app:trackColorInactive="@color/lolite_25"
+					app:haloColor="?colorSecondary"
+					
+					app:thumbColor="@color/white"
+					app:thumbRadius="16dp"
+					
 					/>
 
-			</androidx.cardview.widget.CardView>
+			</com.google.android.material.card.MaterialCardView>
 
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -344,15 +342,14 @@
 			>
 
 			<!-- name -->
-			<TextView
-				android:id="@+id/tvChangeName"
+			<com.google.android.material.textview.MaterialTextView android:id="@+id/tvChangeName"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="64dp"
-
-				android:text="@string/reg_step_4_tv_change_name"
+				
 				android:maxLines="3"
-				android:textSize="30sp"
+				android:text="@string/reg_step_4_tv_change_name"
+				android:textAppearance="?textAppearanceHeadline5"
 
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
@@ -372,6 +369,7 @@
 				app:boxStrokeErrorColor="@color/colorError"
 
 				app:counterMaxLength="30"
+				app:counterEnabled="true"
 
 				app:errorEnabled="true"
 				app:errorTextColor="@color/colorError"
@@ -380,7 +378,7 @@
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/tvChangeName"
-				app:layout_constraintBottom_toTopOf="@id/tvChooseYourCity"
+				app:layout_constraintBottom_toBottomOf="parent"
 				>
 
 
@@ -394,72 +392,19 @@
 
 					android:imeOptions="actionDone"
 					android:inputType="textPersonName"
+					android:maxLength="30"
 					android:maxLines="1"
 
 					android:textColor="@color/white"
 					android:textCursorDrawable="@color/lolite"
 					android:textSize="20sp"
+					
+					app:hideKeyboardOnInputDone="@{true}"
 					/>
 
 
 			</com.google.android.material.textfield.TextInputLayout>
-
-
-			<!-- city -->
-			<TextView
-				android:id="@+id/tvChooseYourCity"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-
-				android:text="@string/reg_step_5_tv_choose_city"
-				android:maxLines="2"
-				android:textSize="32sp"
-
-				app:layout_constraintBottom_toTopOf="@id/dropdownCityChooserContainer"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/layoutInputChangeName"
-				/>
-
-			<com.google.android.material.textfield.TextInputLayout
-				android:id="@+id/dropdownCityChooserContainer"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="24dp"
-
-				app:boxStrokeColor="@color/text_input_layout"
-				app:boxStrokeWidth="2dp"
-
-				app:hintEnabled="true"
-				app:hintTextColor="@color/white"
-				android:hint="@string/hint_city"
-
-				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tvChooseYourCity"
-				>
-
-
-				<com.google.android.material.textfield.MaterialAutoCompleteTextView
-					android:id="@+id/dropdownCityChooser"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-
-					android:background="@null"
-					android:cursorVisible="false"
-					android:drawablePadding="-24dp"
-					android:focusable="false"
-					android:gravity="center"
-					android:imeOptions="actionDone"
-					android:inputType="text"
-
-					android:textColor="@color/white"
-					android:textSize="20sp"
-					/>
-
-			</com.google.android.material.textfield.TextInputLayout>
+			
 
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -481,8 +426,7 @@
 			>
 
 
-			<TextView
-				android:id="@+id/tvAllCorrect"
+			<com.google.android.material.textview.MaterialTextView android:id="@+id/tvAllCorrect"
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="24dp"
@@ -491,9 +435,8 @@
 				android:text="@string/reg_step_final_tv_check_is_correct"
 				android:textAlignment="center"
 				android:maxLines="2"
-				android:textSize="32sp"
-
-
+				android:textAppearance="?textAppearanceHeadline4"
+				
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
@@ -515,7 +458,7 @@
 
 				app:errorEnabled="true"
 				app:errorTextColor="@color/colorError"
-				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
 
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
@@ -528,15 +471,16 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:background="@null"
+					
 					android:cursorVisible="false"
 					android:focusable="false"
+					
 					android:gravity="center"
 					android:imeOptions="actionDone"
 					android:inputType="textPersonName"
 
 					android:text="@string/default_name"
 					android:textColor="@color/white"
-					android:textSize="20sp"
 					/>
 
 			</com.google.android.material.textfield.TextInputLayout>
@@ -556,7 +500,7 @@
 
 				app:errorEnabled="true"
 				app:errorTextColor="@color/colorError"
-				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
 
 				app:layout_constraintEnd_toStartOf="@id/layoutFinalPreferredGender"
 				app:layout_constraintStart_toStartOf="parent"
@@ -569,15 +513,16 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:background="@null"
+					
 					android:cursorVisible="false"
 					android:focusable="false"
+					
 					android:gravity="center"
 					android:imeOptions="actionDone"
 					android:inputType="text"
 
 					android:text="@string/genderMale"
 					android:textColor="@color/white"
-					android:textSize="20sp"
 					/>
 
 			</com.google.android.material.textfield.TextInputLayout>
@@ -596,7 +541,7 @@
 
 				app:errorEnabled="true"
 				app:errorTextColor="@color/colorError"
-				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
 
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toEndOf="@id/layoutFinalGender"
@@ -609,15 +554,16 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:background="@null"
+					
 					android:cursorVisible="false"
 					android:focusable="false"
+					
 					android:gravity="center"
 					android:imeOptions="actionDone"
 					android:inputType="text"
 
 					android:text="@string/preferredGenderEveryone"
 					android:textColor="@color/white"
-					android:textSize="20sp"
 					/>
 
 			</com.google.android.material.textfield.TextInputLayout>
@@ -636,7 +582,7 @@
 				app:hintEnabled="true"
 				app:hintTextColor="@color/white"
 
-				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
 
 				app:layout_constraintEnd_toStartOf="@id/layoutFinalCity"
 				app:layout_constraintStart_toStartOf="parent"
@@ -649,15 +595,16 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:background="@null"
+					
 					android:cursorVisible="false"
 					android:focusable="false"
+					
 					android:gravity="center"
 					android:imeOptions="actionDone"
 					android:inputType="number"
 
 					android:text="@string/default_age_text"
 					android:textColor="@color/white"
-					android:textSize="20sp"
 					/>
 
 			</com.google.android.material.textfield.TextInputLayout>
@@ -675,12 +622,12 @@
 				app:hintEnabled="true"
 				app:hintTextColor="@color/white"
 
-				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-
-				app:layout_constraintStart_toEndOf="@id/layoutFinalAge"
-				app:layout_constraintEnd_toEndOf="parent"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+				
 				app:layout_constraintTop_toBottomOf="@id/layoutFinalPreferredGender"
 				app:layout_constraintBottom_toTopOf="@id/btnFinalBack"
+				app:layout_constraintStart_toEndOf="@id/layoutFinalAge"
+				app:layout_constraintEnd_toEndOf="parent"
 				>
 
 				<com.google.android.material.textfield.TextInputEditText
@@ -688,14 +635,15 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
 					android:background="@null"
+					
 					android:cursorVisible="false"
 					android:focusable="false"
 					android:gravity="center"
+					
 					android:inputType="text"
 					android:maxLines="1"
 
 					android:textColor="@color/white"
-					android:textSize="20sp"
 					/>
 
 			</com.google.android.material.textfield.TextInputLayout>
