--- a/app/src/main/res/navigation/flow_navigation.xml
+++ b/app/src/main/res/navigation/flow_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -29,6 +29,9 @@
 
 	<action android:id="@+id/action_global_mainFlowFragment"
 		app:destination="@id/mainFlowFragment"/>
+	
+	<action android:id="@+id/action_global_registrationFlowFragment"
+		app:destination="@id/registrationFlowFragment" />
 
 
 	<fragment android:id="@+id/authFlowFragment"
@@ -48,6 +51,10 @@
 		android:label="SplashFragment"
 		tools:layout="@layout/fragment_splash"
 		/>
-
+	
+	
+	<fragment android:id="@+id/registrationFlowFragment"
+		android:name="com.mmdev.roove.ui.registration.RegistrationFragment"
+		tools:layout="@layout/fragment_auth_registration" />
 
 </navigation>
