--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -45,8 +45,9 @@
 		<!-- display menu popup under toolbar -->
 		<item name="actionOverflowMenuStyle">@style/MyOverFlowMenuStyle</item>
 		
-		<item name="android:navigationBarColor">@color/black_1</item>
-		<item name="android:statusBarColor">@color/black_1</item>
+		<!-- system colors -->
+		<item name="android:navigationBarColor">@android:color/transparent</item>
+		<item name="android:statusBarColor">@android:color/transparent</item>
 		<item name="android:windowBackground">@null</item>
 		
 		<item name="materialAlertDialogTheme">@style/MyMaterialAlertDialog</item>
@@ -85,6 +86,12 @@
 		<!-- This is important! Don't forget to set window background -->
 		<item name="android:windowBackground">@color/colorPrimaryDark</item>
 	
+	</style>
+	
+	<!-- Alert dialog style	-->
+	<style name="MyMaterialAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+		<item name="buttonBarPositiveButtonStyle">@style/MyMaterialAlertDialog.ButtonPositive</item>
+		<item name="buttonBarNegativeButtonStyle">@style/MyMaterialAlertDialog.ButtonNegative</item>
 	</style>
 
 </resources>
